<resources>
    <string name="app_name">Pinger</string>
    <string name="server_address_hint">Введите адрес сервера</string>
    <string name="add_to_favorites_description">Добавить в избранное</string>
    <string name="change_theme">Сменить тему</string>
    <string name="button_check_availability">Проверить доступность</string>
    <string name="button_clear">Очистить</string>
    <string name="clear_button">Очистить</string>
    <string name="send_request">Отправить</string>
    <string name="result">Результат</string>
    <string name="default_interval">1</string>
    <string name="interval">Интервал запросов</string>
    <string name="default_count">4</string>
    <string name="count_requests">Количество запросов</string>
    <string name="hostname">Адрес хоста</string>
    <string name="unknown_error">Произошла неизвестная ошибка</string>
    <string name="hostname_not_filled">Адрес не указан</string>
    <string name="output_was_copied">Вывод скопирован в буфер обмена</string>
    <string name="error_less_than_zero">Должно быть больше 0</string>
    <string name="error_field_cannot_be_empty">Поле не может быть пустым</string>
    <string name="check_fields_are_filled_in">Проверьте заполняемость полей</string>
    <string name="check_address_field">Адрес должен быть заполнен</string>
    <string name="request_aborted">\nrequest aborted</string>
    <string name="aborted">Прервать</string>
    <string name="infinity">∞</string>
    <string name="output_separator">\n</string>
    <string name="google_public_dns">8.8.8.8</string>
    <string name="settings">Настройки</string>

    <string name="theme_system">Системная</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Тёмная</string>

    <string name="theme_select_system">Выбрана системная тема</string>
    <string name="theme_select_light">Выбрана светлая тема</string>
    <string name="theme_select_dark">Выбрана тёмная тема</string>
    <string name="favourites">Избранное</string>
    <string name="remove">Удалить</string>
    <string name="error_input_address">Введите адрес</string>
    <string name="input_new_address">Введите новый адрес</string>
    <string name="add">Добавить</string>
    <string name="selected_items">Выберите адреса, которые нужно удалить</string>

    <string name="settings_app">Настройки приложения</string>
    <string name="settings_app_theme">Тема приложения</string>
    <string name="settings_auto_add_host">Добавлять в избранное</string>
    <string name="settings_auto_add_host_summary">Автоматически добавлять адрес в избранное при первой отправке запроса</string>
    <string name="settings_favourites">Избранное</string>
    <string name="settings_favourites_summary">Редактировать список адресов</string>
    <string name="settings_requests">Запросы</string>
    <string name="settings_font_size">Размер шрифта вывода</string>
    <string name="settings_count_requests">Количество запросов по умолчанию</string>
    <string name="settings_count_requests_summary">При установке 0 запрос будет отправляться до принудительной остановки</string>
    <string name="settings_interval">Интервал запросов по умолчанию</string>
</resources>