<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_app"
        app:key="settings_app_settings">

        <ListPreference
            android:defaultValue="system"
            android:entries="@array/theme_options"
            android:entryValues="@array/theme_values"
            android:key="settings_theme"
            android:title="@string/settings_app_theme"
            app:defaultValue="system" />

        <CheckBoxPreference
            android:key="settings_auto_add_host"
            android:summary="@string/settings_auto_add_host_summary"
            android:title="@string/settings_auto_add_host"
            app:defaultValue="true" />

        <Preference
            android:key="settings_favourites"
            android:summary="@string/settings_favourites_summary"
            android:title="@string/favourites" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_requests"
        app:key="settings_requests">

        <SeekBarPreference
            android:defaultValue="15"
            android:key="settings_output_font_size"
            android:max="20"
            android:title="@string/settings_font_size"
            app:defaultValue="14"
            app:min="8"
            app:showSeekBarValue="true" />

        <EditTextPreference
            android:inputType="number"
            android:key="settings_default_count"
            android:selectAllOnFocus="true"
            android:summary="@string/settings_count_requests_summary"
            android:title="@string/settings_count_requests"
            app:defaultValue="0" />

        <EditTextPreference
            android:inputType="number"
            android:key="settings_default_interval"
            android:selectAllOnFocus="true"
            android:title="@string/settings_interval"
            app:defaultValue="0" />

    </PreferenceCategory>

</PreferenceScreen>